load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//dev:defs.bzl", "ts_project")
load("//dev:eslint.bzl", "eslint_config_and_lint_root")

npm_link_all_packages(name = "node_modules")

eslint_config_and_lint_root()

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//client:__subpackages__"],
    deps = [
        "//:tsconfig",
        "//client/build-config:tsconfig",
        "//client/common:tsconfig",
    ],
)

ts_project(
    name = "app-shell",
    srcs = ["src/app-shell.tsx"],
    tsconfig = ":tsconfig",
    deps = [
        ":node_modules/@sourcegraph/common",
        "//:node_modules/@tauri-apps/api",
    ],
)
