load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//dev:defs.bzl", "ts_project")

npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//client:__subpackages__"],
    deps = [
        "//:tsconfig",
        "//client/build-config:tsconfig",
    ],
)

ts_project(
    name = "backstage-frontend",
    srcs = [
        "src/components/ExampleComponent/ExampleComponent.tsx",
        "src/components/ExampleComponent/index.ts",
        "src/components/ExampleFetchComponent/ExampleFetchComponent.tsx",
        "src/components/ExampleFetchComponent/index.ts",
        "src/index.ts",
        "src/plugin.ts",
        "src/routes.ts",
        "src/setupTests.ts",
    ],
    tsconfig = ":tsconfig",
    deps = [
        ":node_modules/@backstage/core-components",
        ":node_modules/@backstage/core-plugin-api",
        ":node_modules/@material-ui/core",
        ":node_modules/@material-ui/lab",
        ":node_modules/@testing-library/jest-dom",
        ":node_modules/cross-fetch",
        ":node_modules/react",
        ":node_modules/react-use",
        "//:node_modules/@types/react",  #keep
        "//:node_modules/@types/testing-library__jest-dom",
    ],
)

ts_project(
    name = "backstage-frontend_tests",
    testonly = True,
    srcs = [
        "src/components/ExampleComponent/ExampleComponent.test.tsx",
        "src/components/ExampleFetchComponent/ExampleFetchComponent.test.tsx",
        "src/plugin.test.ts",
    ],
    tsconfig = ":tsconfig",
    deps = [
        ":backstage-frontend",
        ":node_modules/@backstage/test-utils",
        ":node_modules/@testing-library/react",
        ":node_modules/msw",
        ":node_modules/react",
        "//:node_modules/@types/react",
    ],
)
