load("//dev:defs.bzl", "sass")

sass(
    name = "base-css",
    srcs = [
        "src/global-styles/base.scss",
    ],
    deps = glob(
        ["src/global-styles/**/*.scss"],
        exclude = ["src/global-styles/base.scss"],
    ) + [
        "//:node_modules/open-color",
        "//client/shared:global-style-vars",
        "//client/wildcard:global-style-vars",
    ],
)
