load("//client/shared/dev:tools.bzl", "module_style_typings")
load("//dev:defs.bzl", "sass")

module_style_typings(
    name = "module_style_typings",
    deps = ["//client/wildcard:sass-breakpoints"],
)

sass(
    name = "module_styles",
    srcs = glob(["src/**/*.module.scss"]),
    deps = ["//client/wildcard:sass-breakpoints"],
)
